Fix overlapping footer

--- a/openliberty.css
+++ b/openliberty.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Asap&family=IBM+Plex+Sans&display=swap');
 
+html {
+  position: relative;
+}
 
 .global-header .nav-links {
   display: none;
@@ -175,7 +178,7 @@ form#register input[type="text"] {
 /* Footer */
 
 footer {
-  position: fixed;
+  position: relative;
   left: 0;
   bottom: 0;
   width: 100%;
